# tbctl

./: .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  generate.sh  openapi.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-06-26-device-command-group.md  2026-06-29-rename-tb-to-tbctl.md  2026-06-30-lift-repo-testpypi-ci.md
docs/specs/: 2026-06-26-device-command-design.md  2026-06-29-rename-tb-to-tbctl.md  2026-06-30-lift-repo-testpypi-ci-design.md
docs/superpowers/plans/: 2026-06-29-ota-download.md
tb/: cli.py  config.py
tb/commands/: _client.py  config_cmd.py  device.py  ota.py
tb_client/: __init__.py
tb_client/models/: __init__.py
tbctl/: cli.py  config.py
tbctl/commands/: _client.py  attributes.py  config_cmd.py  device.py  ota.py  telemetry.py
tests/: conftest.py  readme_check.py  test_attributes.py  test_client.py  test_config.py  test_device.py  test_ota.py  test_readme.py  test_telemetry.py
