[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tb"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "python-dateutil>=2.8",
    "urllib3>=2",
    "tomli-w>=1.0",
]

[project.scripts]
tb = "tb.cli:main"

[tool.hatch.build]
ignore-vcs = true
exclude = [
    "tb_client/.openapi-generator",
    "tb_client/docs",
    "tb_client/test",
]

[tool.hatch.build.targets.wheel]
packages = ["tb", "tb_client"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pre-commit>=3",
    "python-lsp-server>=1.12",
    "python-lsp-ruff>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
